@startuml
class de.mash1t.chat.core.RoleType
class de.mash1t.chat.logging.Counters
class de.mash1t.chat.logging.CustomLogger
class de.mash1t.chat.logging.LoggingController
enum de.mash1t.chat.logging.LogDir
enum de.mash1t.chat.logging.LogPath
de.mash1t.chat.logging.CustomLogger ..> de.mash1t.chat.core.RoleType
de.mash1t.chat.logging.CustomLogger ..> de.mash1t.chat.logging.LoggingController
de.mash1t.chat.logging.LoggingController ..> de.mash1t.chat.core.RoleType
@enduml